flesh out page sections

--- a/index.html
+++ b/index.html
@@ -24,19 +24,76 @@
         <li>Privacy</li>
       </ul>
     </div>
-    <div class="header">
-      <div class="search-container">User Name</div>
-      <div class="button-container"> User Name</div>
+    <div class="head-bar">
+      <div class="search-container">
+        <form>
+          <input type="search" id="search" name="search" />
+        </form>
+      </div>
+      <div class="notification-container">P. Ovidius Naso</div>
+      <div class="greeting-container">P. Ovidius Naso (@ovid)</div>
+      <div class="buttons">
+        <button type="button">New</button>
+        <button type="button">Upload</button>
+        <button type="button">Share</button>
+      </div>
     </div>
     <div class="main-content">
       <div class="projects-container">
         <div class="title">Your Projects</div>
+        <div class="cards">
+          <div class="card">
+            <div class="title">Primvs</div>
+            <div class="preview">In nova fert animus mutatas dicere formas
+            corpora; di, coeptis (nam vos mutastis et illas)
+            adspirate meis primaque ab origine mundi
+            ad mea perpetuum deducite tempora carmen!</div>
+          </div>
+          <div class="card">
+            <div class="title">Secvndvs</div>
+            <div class="preview">Regia Solis erat sublimibus alta columnis,
+            clara micante auro flammasque imitante pyropo,
+            cuius ebur nitidum fastigia summa tegebat,
+            argenti bifores radiabant lumine valvae.</div>
+          </div>
+          <div class="card">
+            <div class="title">Tetritvs</div>
+            <div class="preview">Iamque deus posita fallacis imagine tauri
+            se confessus erat Dictaeaque rura tenebat,
+            cum pater ignarus Cadmo perquirere raptam
+            imperat et poenam, si non invenerit, addit
+            exilium, facto pius et sceleratus eodem.</div>
+          </div>
+          <div class="card">
+            <div class="title">Qvatrvs</div>
+            <div class="preview">At non Alcithoe Minyeias orgia censet
+            accipienda dei, sed adhuc temeraria Bacchum
+            progeniem negat esse Iovis sociasque sorores
+            inpietatis habet. festum celebrare sacerdos
+            inmunesque operum famulas dominasque suorum...</div>
+          </div>
+          <div class="card">
+            <div class="title">Qvintvs</div>
+            <div class="preview">Dumque ea Cephenum medio Danaeius heros
+            agmine commemorat, fremida regalia turba
+            atria conplentur, nec coniugialia festa
+            qui canat est clamor, sed qui fera nuntiet arma...</div>
+          </div>
+          <div class="card">
+            <div class="title">Sextvs</div>
+            <div class="preview">Praebuerat dictis Tritonia talibus aures
+            carminaque Aonidum iustamque probaverat iram;
+            tum secum: 'laudare parum est, laudemur et ipsae
+            numina nec sperni sine poena nostra sinamus.'</div>
+          </div>
+        </div>
       </div>
       <div class="announcement-container">
         <div class="title">Announcements</div>
       </div>
       <div class="news-container">
         <div class="title">Trending</div>
+        <!--@virgil, @cicero, @catullus, @horace-->
       </div>
     </div>
   </div>
