reconfig && begin adding SVGs

--- a/index.html
+++ b/index.html
@@ -26,12 +26,19 @@
     </div>
     <div class="head-bar">
       <div class="search-container">
+        <img src="images/magnify.svg"></img>
         <form>
           <input type="search" id="search" name="search" />
         </form>
       </div>
-      <div class="notification-container">P. Ovidius Naso</div>
-      <div class="greeting-container">P. Ovidius Naso (@ovid)</div>
+      <div class="notification-container">
+        <img src="images/bell-ring.svg"></img>
+        <div class="name">P. Ovidius Naso</div>
+      </div>
+      <div class="greeting-container">
+        <div class="text">Hi there,</div>
+        <div class="name">P. Ovidius Naso (@ovid)</div>
+      </div>
       <div class="buttons">
         <button type="button">New</button>
         <button type="button">Upload</button>
@@ -48,6 +55,11 @@
             corpora; di, coeptis (nam vos mutastis et illas)
             adspirate meis primaque ab origine mundi
             ad mea perpetuum deducite tempora carmen!</div>
+            <div class="icons">
+              <img src="images/star-plus-outline.svg"></img>
+              <img src="images/eye-plus-outline.svg"></img>
+              <img src="images/source-branch.svg"></img>
+            </div>
           </div>
           <div class="card">
             <div class="title">Secvndvs</div>
@@ -55,6 +67,11 @@
             clara micante auro flammasque imitante pyropo,
             cuius ebur nitidum fastigia summa tegebat,
             argenti bifores radiabant lumine valvae.</div>
+            <div class="icons">
+              <img src="images/star-plus-outline.svg"></img>
+              <img src="images/eye-plus-outline.svg"></img>
+              <img src="images/source-branch.svg"></img>
+            </div>
           </div>
           <div class="card">
             <div class="title">Tetritvs</div>
@@ -63,6 +80,11 @@
             cum pater ignarus Cadmo perquirere raptam
             imperat et poenam, si non invenerit, addit
             exilium, facto pius et sceleratus eodem.</div>
+            <div class="icons">
+              <img src="images/star-plus-outline.svg"></img>
+              <img src="images/eye-plus-outline.svg"></img>
+              <img src="images/source-branch.svg"></img>
+            </div>
           </div>
           <div class="card">
             <div class="title">Qvatrvs</div>
@@ -71,6 +93,11 @@
             progeniem negat esse Iovis sociasque sorores
             inpietatis habet. festum celebrare sacerdos
             inmunesque operum famulas dominasque suorum...</div>
+            <div class="icons">
+              <img src="images/star-plus-outline.svg"></img>
+              <img src="images/eye-plus-outline.svg"></img>
+              <img src="images/source-branch.svg"></img>
+            </div>
           </div>
           <div class="card">
             <div class="title">Qvintvs</div>
@@ -78,6 +105,11 @@
             agmine commemorat, fremida regalia turba
             atria conplentur, nec coniugialia festa
             qui canat est clamor, sed qui fera nuntiet arma...</div>
+            <div class="icons">
+              <img src="images/star-plus-outline.svg"></img>
+              <img src="images/eye-plus-outline.svg"></img>
+              <img src="images/source-branch.svg"></img>
+            </div>
           </div>
           <div class="card">
             <div class="title">Sextvs</div>
@@ -85,15 +117,62 @@
             carminaque Aonidum iustamque probaverat iram;
             tum secum: 'laudare parum est, laudemur et ipsae
             numina nec sperni sine poena nostra sinamus.'</div>
+            <div class="icons">
+              <img src="images/star-plus-outline.svg"></img>
+              <img src="images/eye-plus-outline.svg"></img>
+              <img src="images/source-branch.svg"></img>
+            </div>
           </div>
         </div>
       </div>
-      <div class="announcement-container">
+      <div class="announcements">
         <div class="title">Announcements</div>
+        <div class="announcement-list">
+          <div class="maintenance">
+            <div class="subtitle">Site Maintenance</div>
+            <div class="text">Annos undeviginti natus exercitum privato
+              consilio et privata impensa comparavi, per quem rem publicam 
+              a dominatione factionis oppressam in libertatem vindicavi.</div>
+          </div>
+          <div class="share-day">
+            <div class="subtitle">Community Share Day</div>
+            <div class="text">Gallia est omnis divisa in partes tres, 
+              quarum unam incolunt Belgae, aliam Aquitani, tertiam qui 
+              ipsorum lingua Celtae, nostra Galli appellantur.</div>
+          </div>
+          <div class="privacy">
+            <div class="subtitle">Updated Privacy Policy</div>
+            <div class="text">Aeneadum genetrix, hominum divomque voluptas,
+              alma Venus, caeli subter labentia signa
+              quae mare navigerum, quae terras frugiferentis
+              concelebras, per te quoniam genus omne animantum...</div>
+          </div>
+        </div>
       </div>
-      <div class="news-container">
+      <div class="trending">
         <div class="title">Trending</div>
-        <!--@virgil, @cicero, @catullus, @horace-->
+        <div class="trending-users">
+          <div class="user">
+            <div class="image-placeholder">V</div>
+            <div class="handle">@virgil</div>
+            <div class="project">Aeneid</div>
+          </div>
+          <div class="user">
+            <div class="image-placeholder">C</div>
+            <div class="handle">@cicero</div>
+            <div class="project">De Re Publica</div>
+          </div>
+          <div class="user">
+            <div class="image-placeholder">18+</div>
+            <div class="handle">@catullus</div>
+            <div class="project">Carmen 16</div>
+          </div>
+          <div class="user">
+            <div class="image-placeholder">H</div>
+            <div class="handle">@horace</div>
+            <div class="project">Odes</div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
